Added css vendors, font awesome js, moment js

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,3 +1,6 @@
+@import './vendors/normalize';
+@import './vendors/boilerplate';
+
 @import '~bulma/bulma';
 @import '~bulma-extensions/bulma-pageloader/dist/css/bulma-pageloader';
 @import '~bulma-extensions/bulma-checkradio/dist/css/bulma-checkradio';
