--- a/src/assets/scss/components/_element.scss
+++ b/src/assets/scss/components/_element.scss
@@ -4,7 +4,7 @@
         pointer-events: none;
         opacity: 0.5;
         &:after {
-            @include loader;
+            // @include loader;
             position: absolute;
             top: calc(50% - 1.5em);
             left: calc(50% - 1.5em);
