Some design fixes

--- a/src/assets/scss/components/_main-area.scss
+++ b/src/assets/scss/components/_main-area.scss
@@ -5,4 +5,8 @@
         margin: auto;
         padding: 3.6*$rem 0 2*$rem;
     }
+
+    &__single-button {
+        margin: auto !important;
+    }
 }
