--- a/src/assets/scss/components/_manager.scss
+++ b/src/assets/scss/components/_manager.scss
@@ -1,10 +1,16 @@
 .manager {
     &__buttons {
         margin-top: 1.8 * $rem;
+        display: flex;
+        align-items: center;
 
         &.is-right {
-            > * {
-                margin-left: auto;
+            justify-content: flex-end;
+        }
+
+        > * {
+            &:not(:first-child) {
+                margin-left: 1rem;
             }
         }
     }
