--- a/src/assets/scss/components/_navbar.scss
+++ b/src/assets/scss/components/_navbar.scss
@@ -7,5 +7,6 @@
         margin-top: 0;
         text-transform: uppercase;
         letter-spacing: 0.0625em;
+        color: color(logo);
     }
 }
